--- a/projects/project3.html
+++ b/projects/project3.html
@@ -249,17 +249,11 @@
             <div class="prd-col-ctn">
                 <div class="left-clm">
                     <div class="prd-1fr image-box">
-                        <div style="position:relative; width:100%; padding-bottom:56.25%; height:0; overflow:hidden;">
-                            <iframe 
-                                src="https://www.facebook.com/share/v/19asggcHtL/embed?video_id=100000000000000&show_text=false&width=560&height=315" 
-                                width="700px" 
-                                height="auto" 
-                                style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;" 
-                                scrolling="no" 
-                                frameborder="0" 
-                                allowfullscreen="true" 
-                                allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
-                            </iframe>
+                        <div style="position:relative; width:100%; padding-bottom:56.25%; height:auto; overflow:hidden;">
+                            <video controls style="width:100%; height:100%; position:absolute; top:0; left:0;">
+                                <source src="/workshop.mp4" type="video/mp4">
+                                Your browser does not support the video tag.
+                            </video>
                         </div>
                     </div>
                 </div>
@@ -309,16 +303,10 @@
             <div class="vid" style="padding-bottom: 40px;">
                 <div class="vid-ctn" style="width: 80%; margin: 0 auto; display: flex; justify-content: center; align-items: center;">
                     <div style="position:relative; width:100%; padding-bottom:56.25%; height:0; overflow:hidden;">
-                        <iframe 
-                            src="https://www.facebook.com/share/v/19xs1mAUC4/embed?video_id=100000000000000&show_text=false&width=560&height=315" 
-                            width="560" 
-                            height="315" 
-                            style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;" 
-                            scrolling="no" 
-                            frameborder="0" 
-                            allowfullscreen="true" 
-                            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
-                        </iframe>
+                        <video controls style="width:100%; height:100%; position:absolute; top:0; left:0;">
+                            <source src="/tuthien.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
                     </div>
                 </div>
             </div>
