--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NGUYEN THAO TRUC</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Inter for a bold, clean look -->
@@ -73,7 +72,7 @@
     <!--NAVBAR-->
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/index.html" id="navbar__logo">NGUYEN THAO TRUC</a>
+            <a href="index.html" id="navbar__logo">NGUYEN THAO TRUC</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -81,23 +80,23 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/projects/project1.html" class="navbar__links">Project_1</a>
+                    <a href="projects/project1.html" class="navbar__links">Project_1</a>
                 </li>
                 <li class="navbar__item"></li>
-                    <a href="/projects/project2.html" class="navbar__links">Project_2</a>
+                    <a href="projects/project2.html" class="navbar__links">Project_2</a>
                 </li>
                 <li class="navbar__item"></li>
-                    <a href="/projects/project3.html" class="navbar__links">Project_3</a>
+                    <a href="projects/project3.html" class="navbar__links">Project_3</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="/index.html" class="button">Home</a>
+                    <a href="index.html" class="button">Home</a>
                 </li>
             </ul>
         </div>
     </nav>
 
         <!-- Hero Section -->
-    <header class="flex items-center justify-center min-h-screen py-20 px-4 text-center rounded-b-lg shadow-lg relative overflow-hidden hero-background" style="background-image: url('/images/Artboard 14x.png'); background-size: cover; background-position: center;">
+    <header class="flex items-center justify-center min-h-screen py-20 px-4 text-center rounded-b-lg shadow-lg relative overflow-hidden hero-background" style="background-image: url('images/Artboard 14x.png'); background-size: cover; background-position: center;">
         <div class="max-w-4xl mx-auto hero-content-wrapper">
             <h1 class="anton-sc-regular text-4xl md:text-5xl lg:text-6xl font-bold mb-4 text-white uppercase tracking-wider" style="font-size: 7rem; margin-bottom: 50px;">
                 Digital Creative Portfolio
@@ -127,9 +126,9 @@
 
     
     <div class="human-cont">
-        <a href="/projects/project1.html">
-        <div class="human-item placeholder" href="/projects/project1.html">
-            <img src="/images/prj1_1 (1).png" alt="Son Project" style="width:auto; height:300px; object-fit:cover; object-position:center; border-radius:8px;">
+        <a href="projects/project1.html">
+        <div class="human-item placeholder">
+            <img src="images/prj1_1 (1).png" alt="Son Project" style="width:auto; height:300px; object-fit:cover; object-position:center; border-radius:8px;">
             <div class="overlay">
                 <div class="overlay-text" style="text-align: center;">
                     <h3 style="font-family: 'Anton SC', sans-serif; font-weight: 400; font-size: 2rem; color: #fff; letter-spacing: 2.5px; text-shadow: 0 2px 12px rgba(0,0,0,0.5); margin-bottom: 0.2rem;">
@@ -143,9 +142,9 @@
         </div>
         </a>
 
-        <a href="/projects/project2.html">
+        <a href="projects/project2.html">
         <div class="human-item placeholder" >
-            <img src="/images/PIC1 (1)4x.png" alt="The Glory" style="width:100%; height:300px; object-fit:cover; object-position:center; border-radius:8px;">
+            <img src="images/PIC1 (1)4x.png" alt="The Glory" style="width:100%; height:300px; object-fit:cover; object-position:center; border-radius:8px;">
             <div class="overlay">
                 <div class="overlay-text" style="text-align: center;">
                     <h3 style="font-family: 'Anton SC', sans-serif; font-weight: 400; font-size: 2rem; color: #fff; letter-spacing: 2.5px; text-shadow: 0 2px 12px rgba(0,0,0,0.5); margin-bottom: 0.2rem;">
@@ -159,9 +158,9 @@
         </div>
         </a>
 
-        <a href="/projects/project3.html">
-        <div class="human-item placeholder" href="/projects/project3.html">
-            <img src="/images/1.png" alt="Nguyễn Phước Thọ" style="width:100%; height:300px; object-fit:cover; object-position:center; border-radius:8px;">
+        <a href="projects/project3.html">
+        <div class="human-item placeholder">
+            <img src="images/1.png" alt="Nguyễn Phước Thọ" style="width:100%; height:300px; object-fit:cover; object-position:center; border-radius:8px;">
             <div class="overlay">
                 <div class="overlay-text">
                     <h3 style="font-family: 'Anton SC', sans-serif; font-weight: 400; font-size: 2rem; color: #fff; letter-spacing: 2.5px; text-shadow: 0 2px 12px rgba(0,0,0,0.5); margin-bottom: 0.2rem;">
@@ -187,10 +186,10 @@
         <div class="footer-section">
             <h4>Link</h4>
             <ul>
-                <li><a href="/index.html" style="color: rgb(139, 139, 139);">Home</a></li>
-                <li><a href="/projects/project1.html" style="color: rgb(139, 139, 139);">Project 1</a></li>
-                <li><a href="/projects/project2.html" style="color: rgb(139, 139, 139);">Project 2</a></li>
-                <li><a href="/projects/project3.html" style="color: rgb(139, 139, 139);">Project 3</a></li>
+                <li><a href="index.html" style="color: rgb(139, 139, 139);">Home</a></li>
+                <li><a href="projects/project1.html" style="color: rgb(139, 139, 139);">Project 1</a></li>
+                <li><a href="projects/project2.html" style="color: rgb(139, 139, 139);">Project 2</a></li>
+                <li><a href="projects/project3.html" style="color: rgb(139, 139, 139);">Project 3</a></li>
             </ul>
         </div>
         
@@ -220,7 +219,7 @@
     <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
     <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/gsap@3/dist/ScrollToPlugin.min.js"></script>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
