--- a/projects/project3.html
+++ b/projects/project3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NGUYEN THAO TRUC</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton+SC&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
     <!--NAVBAR-->
     <nav class="navbar">
         <div class="navbar__container">
-            <a href="/index.html" id="navbar__logo">NGUYEN THAO TRUC</a>
+            <a href="../index.html" id="navbar__logo">NGUYEN THAO TRUC</a>
             <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -35,16 +35,16 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="/projects/project1.html" class="navbar__links">Project_1</a>
+                    <a href="project1.html" class="navbar__links">Project_1</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/projects/project2.html" class="navbar__links">Project_2</a>
+                    <a href="project2.html" class="navbar__links">Project_2</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/projects/project3.html" class="navbar__links">Project_3</a>
+                    <a href="project3.html" class="navbar__links">Project_3</a>
                 </li>
                 <li class="navbar__btn">
-                    <a href="/index.html" class="button">Home</a>
+                    <a href="../index.html" class="button">Home</a>
                 </li>
             </ul>
         </div>
@@ -239,9 +239,9 @@
     <!--(5) ARTWORK PRODUCT-->
         <div class="prd-3fr">
             <div class="prd-3fr-ctn image-box">
-                <img src="/images/1.png" alt="" class="image gallery-item">
-                <img src="/images/2.jpg" alt="" class="image gallery-item">
-                <img src="/images/3.jpg" alt="" class="image gallery-item">
+                <img src="../images/1.png" alt="" class="image gallery-item">
+                <img src="../images/2.jpg" alt="" class="image gallery-item">
+                <img src="../images/3.jpg" alt="" class="image gallery-item">
             </div>
         </div>
 
@@ -251,7 +251,7 @@
                     <div class="prd-1fr image-box">
                         <div style="position:relative; width:100%; padding-bottom:56.25%; height:auto; overflow:hidden;">
                             <video controls style="width:100%; height:100%; position:absolute; top:0; left:0;">
-                                <source src="/workshop.mp4" type="video/mp4">
+                                <source src="../workshop.mp4" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video>
                         </div>
@@ -283,14 +283,14 @@
 
     <!--(5) ARTWORK PRODUCT-->
         <div style="display: flex; justify-content: center; align-items: flex-start; gap: 24px; padding-bottom: 25px;">
-            <img class="image-box" src="/images/4.jpg" style="width: 25.7%; height: auto;">
-            <img class="image-box" src="/images/5.jpg" style="width: 48%; height: auto;">
+            <img class="image-box" src="../images/4.jpg" style="width: 25.7%; height: auto;">
+            <img class="image-box" src="../images/5.jpg" style="width: 48%; height: auto;">
         </div>
 
 
         <div class="main-p3">
             <div class="image-box">
-                <img src="/images/chung4x.png" style="width: 60%; height: auto; margin: 0 auto; display: flex; justify-content: center; align-items: center;">
+                <img src="../images/chung4x.png" style="width: 60%; height: auto; margin: 0 auto; display: flex; justify-content: center; align-items: center;">
             </div>
             <section class="role-cont" style="padding-bottom: 40px;">
                 <div class="role-text">
@@ -304,7 +304,7 @@
                 <div class="vid-ctn" style="width: 80%; margin: 0 auto; display: flex; justify-content: center; align-items: center;">
                     <div style="position:relative; width:100%; padding-bottom:56.25%; height:0; overflow:hidden;">
                         <video controls style="width:100%; height:100%; position:absolute; top:0; left:0;">
-                            <source src="/tuthien.mp4" type="video/mp4">
+                            <source src="../tuthien.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
@@ -318,10 +318,10 @@
         <div class="footer-section">
             <h4>Link</h4>
             <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/projects/project1.html">Project 1</a></li>
-                <li><a href="/projects/project2.html">Project 2</a></li>
-                <li><a href="/projects/project3.html">Project 3</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="project1.html">Project 1</a></li>
+                <li><a href="project2.html">Project 2</a></li>
+                <li><a href="project3.html">Project 3</a></li>
             </ul>
         </div>
         
@@ -388,7 +388,7 @@
     <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
     <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/gsap@3/dist/ScrollToPlugin.min.js"></script>
-    <script src="/script.js"></script>
+    <script src="../script.js"></script>
 
 </body>
 </html>
