--- a/projects/project1.html
+++ b/projects/project1.html
@@ -289,7 +289,7 @@
                 </div>
             
                 <div class="image-box">
-                    <img src="../images/prj1_5_3.JPG" alt="" class="image">
+                    <img src="../images/prj1_5_3.jpg" alt="" class="image">
                 </div>
             
             </div>
@@ -321,7 +321,7 @@
         <div class="prd-col-ctn">
             <div class="left-clm">
                 <div class="prd-1fr image-box">
-                    <img src="../images/Bài Hint.JPG" alt="" style="width: 100%; height: auto;">
+                    <img src="../images/baihint.jpg" alt="" style="width: 100%; height: auto;">
                 </div>
             </div>
 
