--- a/projects/project3.html
+++ b/projects/project3.html
@@ -303,10 +303,13 @@
             <div class="vid" style="padding-bottom: 40px;">
                 <div class="vid-ctn" style="width: 80%; margin: 0 auto; display: flex; justify-content: center; align-items: center;">
                     <div style="position:relative; width:100%; padding-bottom:56.25%; height:0; overflow:hidden;">
-                        <video controls style="width:100%; height:100%; position:absolute; top:0; left:0;">
-                            <source src="../tuthien.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
+                        <iframe width="100%" height="400" 
+                                src="https://www.youtube.com/embed/m4EP_sDr1_g" 
+                                title="YouTube video player"
+                                frameborder="0" 
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                                allowfullscreen>
+                        </iframe>
                     </div>
                 </div>
             </div>
