--- a/projects/project3.html
+++ b/projects/project3.html
@@ -311,6 +311,7 @@
                                 allowfullscreen>
                         </iframe>
                     </div>
+                    <a href="https://www.facebook.com/share/v/1HoapfLUYC/" target="_blank" class="montserrat-medium" style="color: #cdedff; text-decoration: none; display: block; text-align: center; margin-top: 20px; font-style: italic;">View the Origin Publication of the Video here</a>
                 </div>
             </div>
         </div>
