--- a/projects/project3.html
+++ b/projects/project3.html
@@ -282,9 +282,13 @@
     </div>
 
     <!--(5) ARTWORK PRODUCT-->
-        <div class="image-box" style="display: flex; justify-content: center; align-items: flex-start; gap: 24px; padding-bottom: 25px;">
-            <img class="image-box" src="../images/4.jpg" style="width: 25.7%; height: auto;">
-            <img class="image-box" src="../images/5.jpg" style="width: 48%; height: auto;">
+        <div style="display: flex; justify-content: center; align-items: flex-start; gap: 24px; padding-bottom: 25px;">
+            <div class="image-box">
+                <img src="../images/4.jpg" style="width: 25.7%; height: auto;">
+            </div>
+            <div class="image-box">
+                <img src="../images/5.jpg" style="width: 48%; height: auto;">
+            </div>
         </div>
 
 
