--- a/projects/project3.html
+++ b/projects/project3.html
@@ -302,7 +302,7 @@
             </section>
             <div class="vid" style="padding-bottom: 40px;">
                 <div class="vid-ctn" style="width: 80%; margin: 0 auto; display: flex; justify-content: center; align-items: center;">
-                    <div style="position:relative; width:100%; padding-bottom:56.25%; height:0; overflow:hidden;">
+                    <div style="position:relative; width:100%; height:0; overflow:hidden;">
                         <iframe width="100%" height="400" 
                                 src="https://www.youtube.com/embed/m4EP_sDr1_g" 
                                 title="YouTube video player"
@@ -312,7 +312,7 @@
                         </iframe>
                     </div>
                 </div>
-                <a href="https://www.facebook.com/share/v/1HoapfLUYC/" target="_blank" class="montserrat-medium" style="color: #cdedff; text-decoration: none; display: block; text-align: center; margin-top: 20px; font-style: italic;">View the Origin Publication of the Video here</a>
+                <a href="https://www.facebook.com/share/v/1HoapfLUYC/" target="_blank" class="montserrat-medium" style="color: #cdedff; text-decoration: none; display: block; text-align: center; margin-top: 20px; font-style: italic;  padding-bottom:56.25%">View the Origin Publication of the Video here</a>
             </div>
         </div>
 
