--- a/projects/project3.html
+++ b/projects/project3.html
@@ -283,8 +283,8 @@
 
     <!--(5) ARTWORK PRODUCT-->
         <div style="display: flex; justify-content: center; align-items: flex-start; gap: 24px; padding-bottom: 25px;">
-                <img src="../images/4.jpg" style="width: 25.7%; height: auto;">
-                <img src="../images/5.jpg" style="width: 48%; height: auto;">
+            <img class="image-box" src="/images/4.jpg" style="width: 25.7%; height: auto;">
+            <img class="image-box" src="/images/5.jpg" style="width: 48%; height: auto;">
         </div>
 
 
