--- a/projects/project3.html
+++ b/projects/project3.html
@@ -297,12 +297,13 @@
                     <p class="montserrat-medium font-chinh" style="color:#bce7ff">
                         Below is the recap video of our charity visit. Together with three other members of the Design–Technical team, I contributed to capturing a wide range of beautiful footage. I also served as the sole video editor for the final film.
                         <br><br>One highlight of this experience was collaborating with the Content team to successfully reach out to renowned artists Đen Vâu and PiaLinh for music rights approval—an effort that added both emotional depth and authenticity to the final piece.
+                        <br><br><a href="https://www.facebook.com/share/v/1HoapfLUYC/" target="_blank" class="montserrat-medium" style="color: #cdedff; text-decoration: none; display: block; text-align: center; margin-top: 20px; font-style: italic; text-decoration: underline">View the Origin Publication of the Video here</a>
                     </p>
                 </div>
             </section>
             <div class="vid" style="padding-bottom: 40px;">
                 <div class="vid-ctn" style="width: 80%; margin: 0 auto; display: flex; justify-content: center; align-items: center;">
-                    <div style="position:relative; width:100%; height:0; overflow:hidden;">
+                    <div style="position:relative; width:100%; height:0; overflow:hidden; padding-bottom:56.25%">
                         <iframe width="100%" height="400" 
                                 src="https://www.youtube.com/embed/m4EP_sDr1_g" 
                                 title="YouTube video player"
@@ -312,7 +313,6 @@
                         </iframe>
                     </div>
                 </div>
-                <a href="https://www.facebook.com/share/v/1HoapfLUYC/" target="_blank" class="montserrat-medium" style="color: #cdedff; text-decoration: none; display: block; text-align: center; margin-top: 20px; font-style: italic;  padding-bottom:56.25%">View the Origin Publication of the Video here</a>
             </div>
         </div>
 
