--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <script>
         // Show alert if on mobile device
         if (window.innerWidth < 1024) {
-            alert("This website is optimized for desktop view.\nIf you're using a mobile device, please switch to a computer or download the PDF indicated below for the best viewing experience of the portfolio.");
+            alert("This website is optimized for desktop view.\n\nIf you're using a mobile device, please switch to a computer or download the PDF indicated below for the best viewing experience of the portfolio. \n\nhttps://drive.google.com/file/d/1iCkQygX41v4F3gSGbSi3pzBy5N7xOBAm/view?usp=sharing");
         }
     </script>
     <!--NAVBAR-->
@@ -120,7 +120,7 @@
             Hello, my name is Nguyen Thao Truc, a student at Le Hong Phong High School for the Gifted. As someone who has been passionate about art since childhood, I’ve always dreamed of sharing my creative work with a wider audience.
             <br><br>
             Below are three of the many design projects I’ve taken part in, each with different roles and responsibilities. Through these projects, I hope to offer a glimpse into both my artistic style and personal philosophy: that art and beauty are not just for self-expression, but also for serving the community.
-            <br><br><br><span class="montserrat-medium font-chinh" style="font-style: italic; color:rgb(150, 150, 150); text-align: center;">If you are using a mobile device, please view the Portfolio in PDF: <a href="" style="color: rgb(175, 175, 255); text-decoration: underline;">Digital Creative Portfolio - Nguyen Thao Truc</a></span>
+            <br><br><br><span class="montserrat-medium font-chinh" style="font-style: italic; color:rgb(150, 150, 150); text-align: center;">If you are using a mobile device, please view the Portfolio in PDF: <a href="https://drive.google.com/file/d/1iCkQygX41v4F3gSGbSi3pzBy5N7xOBAm/view?usp=sharing" style="color: rgb(175, 175, 255); text-decoration: underline;">Digital Creative Portfolio - Nguyen Thao Truc</a></span>
         </p>
     </div>
 
