--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
             INTRODUCTION
         </h2>
         <p class="montserrat-medium font-chinh" style="color:white; width: 90%; margin: 30px auto 60px;">
-            Hello, my name is Nguyen Thao Truc, a student at Le Hong Phong High School for the Gifted. As someone who has been passionate about art since childhood, I’ve always dreamed of sharing my creative work with a wider audience.
-            <br><br>
+            Hello, my name is Nguyen Thao Truc, a student at Le Hong Phong High School for the Gifted. Ever since childhood, I’ve been passionate about art and have always dreamed of sharing my creative work with a wider audience. To bring that vision to life, I designed and coded this website as a personal portfolio to showcase my projects and artistic journey.            <br><br>
             Below are three of the many design projects I’ve taken part in, each with different roles and responsibilities. Through these projects, I hope to offer a glimpse into both my artistic style and personal philosophy: that art and beauty are not just for self-expression, but also for serving the community.
             <br><br><br><span class="montserrat-medium font-chinh" style="font-style: italic; color:rgb(150, 150, 150); text-align: center;">If you are using a mobile device, please view the Portfolio in PDF: <a href="https://drive.google.com/file/d/1iCkQygX41v4F3gSGbSi3pzBy5N7xOBAm/view?usp=sharing" style="color: rgb(175, 175, 255); text-decoration: underline;">Digital Creative Portfolio - Nguyen Thao Truc</a></span>
         </p>
