--- a/projects/project1.html
+++ b/projects/project1.html
@@ -526,7 +526,7 @@
         
         <div class="footer-section">
             <h4>Contact</h4>
-            <p>Address: 264/10/17/15 Lê Văn Lương, Tân Hương Ward, D7, Ho Chi Minh City</p>
+            <p>Address: 264/10/17/15 Lê Văn Lương, Tân Hưng Ward, D7, Ho Chi Minh City</p>
             <p>Email: marythaotruc@gmail.com</p>
             <p>Phone No: +84 773918933</p>
         </div>
